--- a/build.gradle
+++ b/build.gradle
@@ -3,19 +3,14 @@ plugins {
     id 'org.springframework.boot' version '3.1.5'
     id 'io.spring.dependency-management' version '1.1.3'
     id 'org.graalvm.buildtools.native' version '0.9.27'
+    id 'io.freefair.lombok' version '8.6'
 }
 
 group = 'br.com.bagnascojhoel'
-version = '0.0.1-SNAPSHOT'
+version = 'beta'
 
 java {
-    sourceCompatibility = '17'
-}
-
-configurations {
-    compileOnly {
-        extendsFrom annotationProcessor
-    }
+    sourceCompatibility = '21'
 }
 
 repositories {
@@ -29,15 +24,13 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.modulith:spring-modulith-starter-core'
     implementation 'org.springframework.modulith:spring-modulith-starter-jdbc'
+    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-api:2.5.0'
+    implementation('org.springdoc:springdoc-openapi-starter-webmvc-ui:2.5.0') {
+        exclude group: 'org.webjars', module: 'swagger-ui'
+    }
     implementation 'org.liquibase:liquibase-core'
 
     runtimeOnly 'org.postgresql:postgresql'
-
-    compileOnly 'org.projectlombok:lombok'
-    annotationProcessor 'org.projectlombok:lombok'
-
-    testCompileOnly 'org.projectlombok:lombok'
-    testAnnotationProcessor 'org.projectlombok:lombok'
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.boot:spring-boot-testcontainers'
@@ -64,4 +57,8 @@ dependencyManagement {
 
 tasks.named('test') {
     useJUnitPlatform()
+}
+
+bootRun {
+    systemProperty 'spring.profiles.active', 'local'
 }
