--- a/src/main/resources/application-local.yaml
+++ b/src/main/resources/application-local.yaml
@@ -3,3 +3,10 @@ springdoc:
     enabled: true
   swagger-ui:
     enabled: true
+
+spring:
+  datasource:
+    # TODO This won't work once I have more modules. Need to look into spring modulith.
+    url: jdbc:postgresql:kwik_ecommerce?currentSchema=product
+    username: kwik
+    password: kwik
