--- a/fly.toml
+++ b/fly.toml
@@ -20,5 +20,5 @@ hard_limit = 200
 grace_period = "20s"
 interval = "10m"
 method = "GET"
-path = "/api/actuator/health"
+path = "/actuator/health"
 timeout = "5s"
